RESOLVED FIXED94586
[EFL][GTK][BlackBerry] Fix build error in the DeviceOrientationClient
https://bugs.webkit.org/show_bug.cgi?id=94586
Summary [EFL][GTK][BlackBerry] Fix build error in the DeviceOrientationClient
Kihong Kwon
Reported 2012-08-21 04:10:03 PDT
Fix build error in the DeviceOrientationClient[Efl|Gtk|BlackBerry].
Attachments
Patch (4.75 KB, patch)
2012-08-21 04:17 PDT, Kihong Kwon
no flags
Kihong Kwon
Comment 1 2012-08-21 04:17:31 PDT
Kentaro Hara
Comment 2 2012-08-21 04:20:05 PDT
Comment on attachment 159651 [details] Patch r=me
WebKit Review Bot
Comment 3 2012-08-21 16:16:32 PDT
Comment on attachment 159651 [details] Patch Clearing flags on attachment: 159651 Committed r126209: <http://trac.webkit.org/changeset/126209>
WebKit Review Bot
Comment 4 2012-08-21 16:16:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.