[EFL][GTK][BlackBerry] Fix build error in the DeviceOrientationClient https://bugs.webkit.org/show_bug.cgi?id=94586

Patch by Kihong Kwon <kihong.kwon@samsung.com> on 2012-08-21
Reviewed by Kentaro Hara.

Source/WebKit/blackberry:

Fix build error in the DeviceOrientationClientBlackBerry.cpp.
It is occured because DeviceOrientation is changed to DeviceOrientationData in the WebCore.

* WebCoreSupport/DeviceOrientationClientBlackBerry.cpp:
(DeviceOrientationClientBlackBerry::lastOrientation):

Source/WebKit/efl:

Fix build error in the DeviceOrientationClientEfl.cpp.
It is occured because DeviceOrientation is changed to DeviceOrientationData in the WebCore.

* WebCoreSupport/DeviceOrientationClientEfl.cpp:
(WebCore::DeviceOrientationClientEfl::lastOrientation):

Source/WebKit/gtk:

Fix build error in the DeviceOrientationClientGtk.cpp.
It is occured because DeviceOrientation is changed to DeviceOrientationData in the WebCore.

* WebCoreSupport/DeviceOrientationClientGtk.cpp:
(WebKit::DeviceOrientationClientGtk::lastOrientation):

Canonical link: https://commits.webkit.org/112445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@126209 268f45cc-cd09-0410-ab3c-d52691b4dbfc